tests/eval/exp/bad/app_error2.scilla
(* Expected result: *)
(* Not a functional value: (IntLit 64 1) *)
let x = Int64 42 in
let f = fun (z : Int64) =>
    let b = z x in
    fun (c : Int64) => z
in
let a = Int64 1 in
let d = Int64 2 in
f a
